--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactjs-google-autocomplete",
-  "version": "1.0.",
+  "version": "1.0.0",
   "description": "React component use google autocomplete",
   "main": "placesAutocomplete.js",
   "keywords": [
